kubernetes/apps/rat-king/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rat-king
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi-crown
    gethomepage.dev/name: Rat King
    gethomepage.dev/description: Burger King Kingdom reward comparator
    gethomepage.dev/group: Tools
spec:
  parentRefs:
    - name: one-gateway-for-all
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - rat-king.lac-coloc.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rat-king
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rat-king-http-redirect
spec:
  parentRefs:
    - name: one-gateway-for-all
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - rat-king.lac-coloc.fr
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
